--- a/handy.css
+++ b/handy.css
@@ -1,8 +1,81 @@
 body{
 	width: 1000px;
+	margin: 0 auto;
 }
 footer{
 	background-color: #222931;
-	color: #5f656d;
-	height: 40px;
+	color: #aeb6be;
+	height: 60px;
+}
+.entirePage{
+	width: 1000px;
+}
+nav{
+	width: 100%;
+	background-color: #222931;
+	color: #fff;
+	height: 50px;
+    text-decoration: none;
+}
+nav:hover{
+	background-color: #ffe718;
+	color: #222931;
+}
+div{
+	text-align: center;
+}
+.deals{
+	width: 300px;
+	height: 100px;
+	background-color: #ffe718;
+}
+.deals:hover{
+	background-color: #222931;
+	color: #fff;
+}
+.diensten{
+	width: 300px;
+	height: 100px;
+	background-color: #ffe718;
+	margin: 0 auto;
+}
+.diensten:hover{
+	background-color: #222931;
+	color: #fff;
+}
+.contact{
+	width: 300px;
+	height: 100px;
+	background-color: #ffe718;
+}
+.contact:hover{
+	background-color: #222931;
+	color: #fff;
+}
+h2{
+	font-size: 16px;
+}
+p{
+	font-size: 10px;
+}
+img:nth-of-type(1){
+	width: 275px;
+	margin: 17.5px;
+}
+img:nth-of-type(2){
+	height: 413px;
+}
+img:nth-of-type(3){
+	width: 300px;
+}
+img:nth-of-type(4){
+	width: 300px;
+	margin-left: 25px;
+	margin-right: 25px;
+}
+img:nth-of-type(5){
+	width: 300px;
+}
+img:nth-of-type(6){
+	height: 220px;
 }
