--- a/handy.css
+++ b/handy.css
@@ -1,3 +1,68 @@
+*{
+	margin: auto;
+}
 body{
-	//
+	width: 1000px;
+	text-align: center;
+}
+.container{
+
+}
+.navbar{
+	height: 50px;
+	background-color: #222931
+}
+.header{
+	width: 100%;
+}
+.banner{
+	margin-top: 0 auto;
+	margin-bottom: 0 auto;
+}
+.banners{
+	width: 300px;
+	height: 220px;
+	margin-left: 12.5px;
+}
+.footer{
+	width: 100%;
+}
+.oplossing{
+	width: 100%;
+	height: 140px;
+	background-color: #ffe718;
+	margin-top: 60px;
+	margin-bottom: 60px;
+}
+.ddc{
+}
+.box{
+	width: 300px;
+	height: 100px;
+	background-color: #ffe718;
+}
+.hugeLetters{
+	font-size: 20px;
+}
+.bigLetters{
+	font-size: 16px;
+}
+.smallLetters{
+	font-size: 10px;
+}
+button{
+	width: 200px;
+	height: 40px;
+	font-size: 10px;
+	border: 0px;
+}
+footer{
+	width: 100%;
+	height: 60px;
+	background-color: #222931;
+	font-size: 12px;
+	color: #fff;
+}
+a{
+	color: #fff;
 }
