--- a/handy.css
+++ b/handy.css
@@ -8,6 +8,10 @@ body{
 .container{
 
 }
+.logo{
+	width: 265px;
+	height: 25px;
+}
 .navbar{
 	height: 50px;
 	background-color: #222931
@@ -18,6 +22,9 @@ body{
 .banner{
 	margin-top: 0 auto;
 	margin-bottom: 0 auto;
+}
+.banner :hover{
+	opacity: 0.5;
 }
 .banners{
 	width: 300px;
@@ -34,12 +41,29 @@ body{
 	margin-top: 60px;
 	margin-bottom: 60px;
 }
-.ddc{
-}
-.box{
+.deals{
 	width: 300px;
 	height: 100px;
 	background-color: #ffe718;
+	float: left;
+	margin-left: 25px;
+}
+.box :hover{
+	background-color: #222931;
+	color: #fff;
+}
+.diensten{
+	width: 300px;
+	height: 100px;
+	background-color: #ffe718;
+}
+.contact{
+	width: 300px;
+	height: 100px;
+	background-color: #ffe718;
+	float: right;
+	margin-top: -100px;
+	margin-right: 25px;
 }
 .hugeLetters{
 	font-size: 20px;
@@ -56,12 +80,16 @@ button{
 	font-size: 10px;
 	border: 0px;
 }
+button:hover{
+	background-color: #222931;
+	color: #fff;
+}
 footer{
 	width: 100%;
 	height: 60px;
 	background-color: #222931;
 	font-size: 12px;
-	color: #fff;
+	color: #5f656d;
 }
 a{
 	color: #fff;
