--- a/handy.css
+++ b/handy.css
@@ -1,23 +1,29 @@
 *{
-	margin: auto;
+	margin: 0;
+	padding: 0;
 }
 body{
-	width: 1000px;
-	text-align: center;
+	
 }
 .container{
-
+	width: 1000px;
+	margin: 0 auto;
 }
 .logo{
 	width: 265px;
 	height: 25px;
+	margin-left: 25px;
+	margin-top: 20px;
 }
 .navbar{
 	height: 50px;
-	background-color: #222931
+	background-color: #222931;
+	position: relative;
+	top: 25px;
 }
 .header{
 	width: 100%;
+	margin-bottom: 55px;
 }
 .banner{
 	margin-top: 0 auto;
@@ -41,29 +47,33 @@ body{
 	margin-top: 60px;
 	margin-bottom: 60px;
 }
+.box :hover{
+	background-color: #222931;
+	color: #fff;
+}
+.box{
+	position: relative;
+	bottom: 50px;
+}
 .deals{
 	width: 300px;
 	height: 100px;
 	background-color: #ffe718;
-	float: left;
-	margin-left: 25px;
-}
-.box :hover{
-	background-color: #222931;
-	color: #fff;
+	display: inline-block;
 }
 .diensten{
 	width: 300px;
 	height: 100px;
 	background-color: #ffe718;
+	display: inline-block;
+	margin-left: 20px;
+	margin-right: 20px;
 }
 .contact{
 	width: 300px;
 	height: 100px;
 	background-color: #ffe718;
-	float: right;
-	margin-top: -100px;
-	margin-right: 25px;
+	display: inline-block;
 }
 .hugeLetters{
 	font-size: 20px;
@@ -79,6 +89,9 @@ button{
 	height: 40px;
 	font-size: 10px;
 	border: 0px;
+	float: right;
+	position: relative;
+	top: 50px;
 }
 button:hover{
 	background-color: #222931;
@@ -89,7 +102,8 @@ footer{
 	height: 60px;
 	background-color: #222931;
 	font-size: 12px;
-	color: #5f656d;
+	color: #fff;
+	text-align: right;
 }
 a{
 	color: #fff;
